<resources>
    <string name="app_name">MachineDone</string>
    <string name="button_main">十   添加项目</string>
    <string name="toolbar_title">所有项目</string>
    <string name="project_title">项目名称</string>
    <string name="toolbar_title1">创建项目</string>
    <string name="write_projectName">请填写项目名称</string>
    <string name="write_projectDescribe">最多输入500个字符</string>
    <string name="create_project">提交</string>
    <string name="create_question">+ 添加问题</string>
    <string name="test">test</string>
    <string name="item_problem">活动问题</string>
    <string name="item_commission">我的代办</string>
    <string name="item_time">创建时间</string>
    <string name="toolbar_title2">问题详情</string>
    <string name="active_problem">活动问题</string>
    <string name="all_problem">所有问题</string>
    <string name="my_problem">我的待办</string>
    <string name="project_sort"><![CDATA[排序<>]]></string>
    <string name="project_screen">筛选</string>
    <string name="add_problem">+ 添加问题</string>
    <string name="title_mini">标题</string>
    <string name="question_detail">问题详情</string>
    <string name="assign_person">指派新的处理人</string>
    <string name="write_assignDescribe">最多输入200个字符</string>
    <string name="write_delayDescribe">最多输入2000个字符</string>
    <string name="project_description">项目描述</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="personal_data">个人资料</string>
    <string name="work_calendar">工作日历</string>
    <string name="faq">常见问题</string>
    <string name="option">设置</string>
    <string name="detail_MachineDone">关于MachineDone</string>
    <string name="title_activity_community_fragment">CommunityFragment</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="fn_m_01">Abraham</string>
    <string name="fn_m_02">Alexander</string>
    <string name="fn_m_03">Berach</string>
    <string name="fn_m_04">Bishop</string>
    <string name="fn_m_05">Bartolomej</string>
    <string name="fn_m_06">Comgan</string>
    <string name="fn_m_07">Conan</string>
    <string name="fn_m_08">Daren</string>
    <string name="fn_m_09">Emmett</string>
    <string name="fn_m_10">Eugen</string>
    <string name="fn_m_11">Finley</string>
    <string name="fn_m_12">Fredrick</string>
    <string name="fn_m_13">Ganesh</string>
    <string name="fn_m_14">Gavriil</string>
    <string name="fn_m_15">Homer</string>
    <string name="fn_m_16">James</string>
    <string name="fn_m_17">Jason</string>
    <string name="fn_m_18">Kevin</string>
    <string name="fn_m_19">Leonard</string>
    <string name="fn_m_20">Mateus</string>
    <string name="fn_m_21">Melvin</string>
    <string name="fn_m_22">Rahul</string>
    <string name="fn_m_23">Rodney</string>
    <string name="fn_m_24">Roscoe</string>
    <string name="fn_m_25">Schuyler</string>
    <string name="fn_m_26">Steven</string>
    <string name="fn_m_27">Tim</string>
    <string name="fn_m_28">Valentin</string>
    <string name="fn_m_29">Walid</string>
    <string name="fn_m_30">Wendel</string>

    <string name="fn_f_01">Aina</string>
    <string name="fn_f_02">Angela</string>
    <string name="fn_f_03">Beverley</string>
    <string name="fn_f_04">Carmen</string>
    <string name="fn_f_05">Carroll</string>
    <string name="fn_f_06">Danielle</string>
    <string name="fn_f_07">Eleni</string>
    <string name="fn_f_08">Fiona</string>
    <string name="fn_f_09">Gabrielle</string>
    <string name="fn_f_10">Garnett</string>
    <string name="fn_f_11">Hadley</string>
    <string name="fn_f_12">Iris</string>
    <string name="fn_f_13">Isabella</string>
    <string name="fn_f_14">Jacquelyn</string>
    <string name="fn_f_15">Justine</string>
    <string name="fn_f_16">Kiera</string>
    <string name="fn_f_17">Lacey</string>
    <string name="fn_f_18">Madison</string>
    <string name="fn_f_19">Maura</string>
    <string name="fn_f_20">Miyako</string>
    <string name="fn_f_21">Muriel</string>
    <string name="fn_f_22">Rachel</string>
    <string name="fn_f_23">Rosemarie</string>
    <string name="fn_f_24">Roswitha</string>
    <string name="fn_f_25">Sibylla</string>
    <string name="fn_f_26">Siva</string>
    <string name="fn_f_27">Tamera</string>
    <string name="fn_f_28">Teresa</string>
    <string name="fn_f_29">Sayaka</string>
    <string name="fn_f_30">Sylvia</string>

    <string name="ln_01">Alberink</string>
    <string name="ln_02">Paige</string>
    <string name="ln_03">McAdams</string>
    <string name="ln_04">Wahner</string>
    <string name="ln_05">Appleby</string>
    <string name="ln_06">Giffard</string>
    <string name="ln_07">Sampson</string>
    <string name="ln_08">Coy</string>
    <string name="ln_09">Appleby</string>
    <string name="ln_10">Dennel</string>
    <string name="ln_11">Isaacson</string>
    <string name="ln_12">Walther</string>
    <string name="ln_13">Derricks</string>
    <string name="ln_14">Collins</string>
    <string name="ln_15">Franke</string>
    <string name="ln_16">Gaertner</string>
    <string name="ln_17">Sasaki</string>
    <string name="ln_18">Stieber</string>
    <string name="ln_19">Cobb</string>
    <string name="ln_20">Maguire</string>
    <string name="ln_21">Paris</string>
    <string name="ln_22">Constable</string>
    <string name="ln_23">Kato</string>
    <string name="ln_24">Haas</string>
    <string name="ln_25">Hamilton</string>
    <string name="ln_26">Doyle</string>
    <string name="ln_27">Ainsworth</string>
    <string name="ln_28">Jerome</string>
    <string name="ln_29">Wolff</string>
    <string name="ln_30">Kiefer</string>
    <string name="ln_31">Schuler</string>
    <string name="ln_32">York</string>
    <string name="ln_33">Gilbert</string>
    <string name="ln_34">Holzer</string>
    <string name="ln_35">Green</string>
    <string name="ln_36">Shelton</string>
    <string name="ln_37">Burns</string>
    <string name="ln_38">Schuchard</string>
    <string name="ln_39">Pawlitzki</string>
    <string name="ln_40">Gott</string>
    <string name="ln_41">Armstrong</string>
    <string name="ln_42">Perry</string>
    <string name="ln_43">Houk</string>
    <string name="ln_44">Paulis</string>
    <string name="ln_45">Ryer</string>
    <string name="ln_46">Gallagher</string>
    <string name="ln_47">Weeber</string>
    <string name="ln_48">Van Tonder</string>
    <string name="ln_49">Jacobson</string>
    <string name="ln_50">Keil</string>
    <string name="ln_51">Neville</string>
    <string name="ln_52">Eliot</string>
    <string name="ln_53">Ferguson</string>
    <string name="ln_54">Devin</string>
    <string name="ln_55">Feldt</string>
    <string name="ln_56">Waller</string>
    <string name="ln_57">Rosa</string>
    <string name="ln_58">Ricci</string>
    <string name="ln_59">Holt</string>
    <string name="ln_60">Vergoossen</string>
    <string name="department">部门</string>
    <string name="station">岗位</string>
    <string name="phone_numb">手机</string>

</resources>
