<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F4F4F4"
    android:orientation="vertical"
    tools:context="com.example.develop.machinedone.fragment.AllProjectActivity">

<include layout="@layout/title" />
    <TextView
        android:id="@+id/project_name"
        android:text="@string/project_title"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#fff"
        android:textColor="#000"
        android:padding="10dp" />

    <EditText
        android:id="@+id/edit_project"
        android:layout_marginBottom="1dp"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:maxLines="5"
        android:hint="@string/write_projectName"
        android:gravity="top|left"
        android:background="#fff"
        android:paddingLeft="10dp"/>

    <TextView
        android:id="@+id/project_describe"
        android:text="@string/project_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#fff"
        android:textColor="#000"
        android:padding="10dp"/>

    <EditText
        android:id="@+id/edit_describe"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:hint="@string/write_projectDescribe"
        android:gravity="top|left"
        android:maxLines="5"
        android:background="#fff"
        android:paddingLeft="10dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="#F4F4F4"/>

    <Button
        android:id="@+id/create_btn"
        android:layout_gravity="end"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/create_project"
        android:background="#56B5D3"/>
</LinearLayout>
