<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#fff"
    android:orientation="vertical"
    android:paddingBottom="2dp">

    <TextView
        android:textColor="#303F9F"
        android:layout_marginLeft="10dp"
        android:layout_gravity="start"
        android:id="@+id/pop_computer"
        android:textSize="16sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/active_problem"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#F4F4F4"/>

    <TextView
        android:layout_marginLeft="10dp"
        android:layout_marginTop="7dp"
        android:textColor="#303F9F"
        android:layout_gravity="start"
        android:textSize="16sp"
        android:id="@+id/pop_financial"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/all_problem"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#F4F4F4"/>

    <TextView
        android:textColor="#303F9F"
        android:layout_marginTop="7dp"
        android:layout_marginLeft="10dp"
        android:textSize="16sp"
        android:layout_gravity="start"
        android:id="@+id/pop_manage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/my_problem"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"/>

</LinearLayout>