<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#f4f4f4"
    tools:context="com.example.develop.machinedone.main.ProblemActivity">
    <include layout="@layout/title"/>
<LinearLayout
    android:background="#f4f4f4"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:layout_marginRight="2dp"
        android:background="#fbfbfb"
        android:gravity="center"
        android:textSize="15sp"
        android:layout_weight="1"
        android:text="@string/project_sort"
        android:id="@+id/projectsort"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

<TextView
    android:paddingTop="10dp"
    android:paddingBottom="10dp"
    android:background="#fbfbfb"
    android:textSize="15sp"
    android:gravity="center"
    android:layout_weight="1"
    android:text="@string/project_screen"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" />
</LinearLayout>
    <TextView
        android:layout_marginBottom="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:textColor="#303F9F"
        android:text="Test"
        android:id="@+id/title_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <ListView
        android:layout_weight="1"
        android:id="@+id/pro_listView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <Button
        android:id="@+id/add_pro"
        android:background="#56B5D3"
        android:text="@string/add_problem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>
