<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F4F4F4"
    android:orientation="vertical"
    android:padding="5dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="1dp"
        android:background="#F4F4F4"
        android:orientation="horizontal"
        android:padding="5dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_gravity="start"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/assign_person"
            android:textColor="#000" />

        <ImageView
            android:id="@+id/delete_img"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:src="@mipmap/ic_cancel" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/handle_liner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="1dp"
        android:background="#fff"
        android:orientation="horizontal"
        android:padding="5dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_gravity="start"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="处理人"
            android:textColor="#000" />

        <TextView
            android:id="@+id/handleUser_text"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_weight="3.5"
            android:gravity="center_vertical"
            android:textColor="#000" />

        <ImageView
            android:id="@+id/drop_img"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:src="@mipmap/ic_drop" />
    </LinearLayout>

    <TextView
        android:id="@+id/assign_describe"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#fff"
        android:padding="10dp"
        android:text="描述"
        android:textColor="#000" />

    <EditText
        android:id="@+id/edit_assign"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="#fff"
        android:gravity="top|left"
        android:hint="@string/write_assignDescribe"
        android:maxLines="6"
        android:paddingLeft="10dp"
        android:textSize="12sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="#F4F4F4" />

    <Button
        android:id="@+id/submit_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:background="#56B5D3"
        android:text="@string/create_project" />
</LinearLayout>
