<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#DEDDE0"
    tools:context="com.example.develop.machinedone.activity.ContactInfoActivity">
<LinearLayout
    android:orientation="vertical"
    android:gravity="center"
    android:background="#ffffff"
    android:layout_width="match_parent"
    android:layout_height="100dp">


<com.example.develop.machinedone.tool.XCRoundImageView
    android:layout_gravity="center"
    android:id="@+id/head_image"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content" />
    <TextView
        android:paddingTop="2dp"
        android:layout_gravity="center"
        android:id="@+id/peoson_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />


</LinearLayout>
    <LinearLayout

        android:layout_marginTop="4dp"
        android:background="#ffffff"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:layout_margin="6dp"
            android:background="@mipmap/ic_department"
            android:layout_width="30dp"
            android:layout_height="30dp" />
        <TextView
            android:textColor="#001"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:paddingLeft="5dp"
            android:text="@string/department"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView

            android:layout_gravity="center_vertical"
            android:text="仓储分拣部"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>
    <LinearLayout
        android:layout_marginTop="1dp"
        android:background="#ffffff"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:layout_margin="6dp"
            android:background="@mipmap/ic_station"
            android:layout_width="30dp"
            android:layout_height="30dp" />
        <TextView
            android:textColor="#001"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:paddingLeft="5dp"
            android:text="@string/station"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:layout_gravity="center_vertical"
            android:text="现场管理员"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>
    <LinearLayout
        android:layout_marginTop="1dp"
        android:background="#ffffff"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:layout_margin="6dp"
            android:background="@mipmap/ic_phonenumb"
            android:layout_width="30dp"
            android:layout_height="30dp" />
        <TextView
            android:textColor="#001"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:paddingLeft="5dp"
            android:text="@string/phone_numb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:text="15860751413"
            android:layout_gravity="center_vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

</LinearLayout>
